<resources>
    <string name="app_name">ImageAnalysisReporter</string>
    <string name="create_report">Create report</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="choose_an_image_and_add_some_sections_to_a_report">Choose an image and add some sections to a report</string>
    <string name="new_report">New Report</string>
    <string name="settings">Settings</string>
    <string name="app_name_full">Image Analysis Reporter</string>
    <string name="don_t_forget_to_specify_image_analysis_tools_aggregator_url_in_settings">Don`t forget to specify image-analysis-tools-aggregator URL in settings!</string>
    <string name="english">English</string>
    <string name="language">Language:</string>
    <string name="backend_url">Backend URL:</string>
    <string name="save_and_return">Save and return</string>
    <string name="get_a_report">Get a report</string>
    <string name="url">URL</string>
    <string name="image_info">Image info</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="filetype">Filetype:</string>
    <string name="file_size">File size:</string>
    <string name="color_schema">Color schema:</string>
    <string name="empty_val">-</string>
    <string name="fourier_transform">Fourier transform</string>
    <string name="image_info_description">The base info about the image: height, width, size, color schema, filetype</string>
    <string name="fourier_transform_description">Post processed result of a discrete 2D Fourier transform to analyse predominant frequencies.</string>
    <string name="report_settings_hint_2">Image uploaded, now you can generate report</string>
    <string name="report">Report</string>
    <string name="download_as_pdf">Download as PDF</string>
    <string name="image_analysis_report">Image analysis report</string>
    <string name="red_channel">Red channel</string>
    <string name="green_channel">Green channel</string>
    <string name="rgb_histogram">RGB histogram</string>
    <string name="blue_channel">Blue channel</string>
    <string name="rgb_histograms">RGB histograms</string>
    <string name="rgb_hist_description">Color intensity distribution</string>
    <string name="colors_palette">Colors palette</string>
    <string name="bit_planes">Bit planes</string>
    <string name="color_palette">Color palette</string>
    <string name="colors_palette_description">Determination of the palette of prevailing tones using the k-means method</string>
    <string name="number">Number</string>
    <string name="_000_000_000">(000, 000, 000)</string>
    <string name="_000000">#000000</string>
    <string name="bit_planes_description">Eight black-white images of bit planes of the source image. Source image will be converted to a 8 bits black-white representation</string>
    <string name="bit_plane_00000001">Bit plane 00000001</string>
    <string name="bit_plane_00000010">Bit plane 00000010</string>
    <string name="bit_plane_00000100">Bit plane 00000100</string>
    <string name="bit_plane_00001000">Bit plane 00001000</string>
    <string name="bit_plane_00010000">Bit plane 00010000</string>
    <string name="bit_plane_00100000">Bit plane 00100000</string>
    <string name="bit_plane_01000000">Bit plane 01000000</string>
    <string name="bit_plane_10000000">Bit plane 10000000</string>
    <string name="max_value">Max value:</string>
</resources>