<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_edge">
        <TextView
            android:id="@+id/fileSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/red_hat_text_regular"
            android:text="@string/empty_val"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/fileSizeField"
            app:layout_constraintTop_toTopOf="@+id/fileSizeField" />

        <TextView
            android:id="@+id/colorSchemaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/red_hat_text_regular"
            android:text="@string/empty_val"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/colorSchemaField"
            app:layout_constraintTop_toTopOf="@+id/colorSchemaField" />

        <TextView
            android:id="@+id/filetypeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/red_hat_text_regular"
            android:text="@string/empty_val"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/filetypeField"
            app:layout_constraintTop_toTopOf="@+id/filetypeField" />

        <TextView
            android:id="@+id/filetypeField"
            style="@style/AppTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/filetype"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/heightField"
            app:layout_constraintTop_toBottomOf="@+id/heightField" />

        <TextView
            android:id="@+id/colorSchemaField"
            style="@style/AppTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/color_schema"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/filetypeField"
            app:layout_constraintTop_toBottomOf="@+id/filetypeField" />

        <TextView
            android:id="@+id/fileSizeField"
            style="@style/AppTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/file_size"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/colorSchemaField"
            app:layout_constraintTop_toBottomOf="@+id/colorSchemaField" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/red_hat_text_bold"
            android:text="@string/image_info"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/widthField"
            style="@style/AppTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/width"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/widthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/red_hat_text_regular"
            android:text="@string/empty_val"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/widthField"
            app:layout_constraintTop_toTopOf="@+id/widthField" />

        <TextView
            android:id="@+id/heightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/red_hat_text_regular"
            android:text="@string/empty_val"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/heightField"
            app:layout_constraintTop_toTopOf="@+id/heightField" />

        <TextView
            android:id="@+id/heightField"
            style="@style/AppTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/height"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/widthField"
            app:layout_constraintTop_toBottomOf="@+id/widthField" />

        <ProgressBar
            android:id="@+id/imageInfoLoadingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>